--- a/index.html
+++ b/index.html
@@ -218,6 +218,126 @@
                         </a>
                     </div>
 
+                    <div class="col-lg-4 col-sm-6">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/application jojo radio_page-0001.jpg" title="application pour une radio">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/application jojo radio_page-0001.jpg" alt="..." />
+                            <div class="portfolio-box-caption p-3">
+                                <div class="project-category text-white-50">Infographie</div>
+                                <div class="project-name">Application pour une radio nommée JOJO</div>
+                            </div>
+                        </a>
+                    </div>
+<div class="col-lg-4 col-sm-6">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/charte graphique Jojo_page-0001.jpg" title="charte graphique pour la radio Jojo">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/charte graphique Jojo_page-0001.jpg" alt="..." />
+                            <div class="portfolio-box-caption p-3">
+                                <div class="project-category text-white-50">Infographie</div>
+                                <div class="project-name">Charte graphique pour le logo radio Jojo</div>
+                            </div>
+                        </a>
+                    </div>
+<div class="col-lg-4 col-sm-6">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/charte graphique Jojo_page-0004.jpg" title="charte graphique pour la radio Jojo">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/charte graphique Jojo_page-0004.jpg" alt="..." />
+                            <div class="portfolio-box-caption p-3">
+                                <div class="project-category text-white-50">Infographie</div>
+                                <div class="project-name">Charte graphique pour le logo radio Jojo</div>
+                            </div>
+                        </a>
+                    </div>
+<div class="col-lg-4 col-sm-6">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/communication mockup_page-0001.jpg" title="Communication mockup pour radio Jojo">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/communication mockup_page-0001.jpg" alt="..." />
+                            <div class="portfolio-box-caption p-3">
+                                <div class="project-category text-white-50">Infographie</div>
+                                <div class="project-name">Communication mockup pour radio Jojo</div>
+                            </div>
+                        </a>
+                    </div>
+<div class="col-lg-4 col-sm-6">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/communication mockup_page-0002.jpg" title="Communication mockup pour radio Jojo">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/communication mockup_page-0002.jpg" alt="..." />
+                            <div class="portfolio-box-caption p-3">
+                                <div class="project-category text-white-50">Infographie</div>
+                                <div class="project-name">Communication mockup pour radio Jojo</div>
+                            </div>
+                        </a>
+                    </div>
+<div class="col-lg-4 col-sm-6">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/affiche1.png" title="affiche promotionnelle Jojo radio">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/affiche1.png" alt="..." />
+                            <div class="portfolio-box-caption p-3">
+                                <div class="project-category text-white-50">Infographie</div>
+                                <div class="project-name">Affiche promotionnelle Jojo radio avec éléments imposés</div>
+                            </div>
+                        </a>
+                    </div>
+<div class="col-lg-4 col-sm-6">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/affiche2.png" title="affiche promotionnelle Jojo radio">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/affiche2.png" alt="..." />
+                            <div class="portfolio-box-caption p-3">
+                                <div class="project-category text-white-50">Infographie</div>
+                                <div class="project-name">Affiche promotionnelle Jojo radio avec éléments imposés</div>
+                            </div>
+                        </a>
+                    </div>
+<div class="col-lg-4 col-sm-6">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/affiche3.png" title="affiche promotionnelle Jojo radio">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/affiche3.png" alt="..." />
+                            <div class="portfolio-box-caption p-3">
+                                <div class="project-category text-white-50">Infographie</div>
+                                <div class="project-name">Affiche promotionnelle Jojo radio avec éléments imposés</div>
+                            </div>
+                        </a>
+                    </div>
+<div class="col-lg-4 col-sm-6">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/affiche4.png" title="affiche promotionnelle Jojo radio">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/affiche4.png" alt="..." />
+                            <div class="portfolio-box-caption p-3">
+                                <div class="project-category text-white-50">Infographie</div>
+                                <div class="project-name">Affiche promotionnelle Jojo radio avec éléments imposés</div>
+                            </div>
+                        </a>
+                    </div>
+<div class="col-lg-4 col-sm-6">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/recherches graphique logo.jpg" title="Recherches graphique logo">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/recherches graphique logo.jpg" alt="..." />
+                            <div class="portfolio-box-caption p-3">
+                                <div class="project-category text-white-50">Infographie</div>
+                                <div class="project-name">Recherches graphique logo Jojo Radio</div>
+                            </div>
+                        </a>
+                    </div>
+<div class="col-lg-4 col-sm-6">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/jojo4 FINAL.png" title="Logo Jojoradio">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/jojo4 FINAL.png" alt="..." />
+                            <div class="portfolio-box-caption p-3">
+                                <div class="project-category text-white-50">Infographie</div>
+                                <div class="project-name">Logo pour la radio Jojo</div>
+                            </div>
+                        </a>
+                    </div>
+<div class="col-lg-4 col-sm-6">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/logo MMI.png" title="Logo pour un concours">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/logo MMI.png" alt="..." />
+                            <div class="portfolio-box-caption p-3">
+                                <div class="project-category text-white-50">Personnel</div>
+                                <div class="project-name">Logo pour un concours</div>
+                            </div>
+                        </a>
+                    </div>
+<div class="col-lg-4 col-sm-6">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/logo MMI.png" title="Logo pour un concours">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/logo MMI.png" alt="..." />
+                            <div class="portfolio-box-caption p-3">
+                                <div class="project-category text-white-50">Personnel</div>
+                                <div class="project-name">Logo pour un concours</div>
+                            </div>
+                        </a>
+                    </div>
+
+                    
+                    
                 </div>
             </div>
         </div>
