--- a/index.html
+++ b/index.html
@@ -318,20 +318,20 @@
                         </a>
                     </div>
 <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/logo MMI.png" title="Logo pour un concours">
-                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/logo MMI.png" alt="..." />
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/audiovisuel_602.jpg" title="Signalétique JPO MMI">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/audiovisuel_602.jpg" alt="..." />
                             <div class="portfolio-box-caption p-3">
-                                <div class="project-category text-white-50">Personnel</div>
-                                <div class="project-name">Logo pour un concours</div>
+                                <div class="project-category text-white-50">Projet tutoré</div>
+                                <div class="project-name">Signalétique pour les JPO MMI</div>
                             </div>
                         </a>
                     </div>
 <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/logo MMI.png" title="Logo pour un concours">
-                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/logo MMI.png" alt="..." />
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/Banderole JPO.jpg" title="Signalétique JPO MMI">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/Banderole JPO.jpg" alt="..." />
                             <div class="portfolio-box-caption p-3">
-                                <div class="project-category text-white-50">Personnel</div>
-                                <div class="project-name">Logo pour un concours</div>
+                                <div class="project-category text-white-50">Projet tutoré</div>
+                                <div class="project-name">Signalétique pour les JPO MMI</div>
                             </div>
                         </a>
                     </div>
